@@ -2,9 +2,9 @@
 package mc.feature.symbolrules;
 
 import com.google.common.collect.Lists;
+import de.monticore.runtime.junit.TestWithMCLanguage;
 import de.monticore.symbols.basicsymbols.BasicSymbolsMill;
 import de.monticore.types.check.SymTypeExpressionFactory;
-import de.se_rwth.commons.logging.LogStub;
 import mc.feature.symbolrules.symbolrulelisttest.SymbolruleListTestMill;
 import mc.feature.symbolrules.symbolrulelisttest._parser.SymbolruleListTestParser;
 import mc.feature.symbolrules.symbolrulelisttest._symboltable.ISymbolruleListTestArtifactScope;
@@ -20,22 +20,13 @@ import org.junit.jupiter.api.Test;
 import java.io.IOException;
 import java.util.Optional;
 
-import de.se_rwth.commons.logging.Log;
-
 import static org.junit.jupiter.api.Assertions.*;
 
+@TestWithMCLanguage(SymbolruleTestMill.class)
 public class SymbolruleTest {
-  
-  @BeforeEach
-  public void before() {
-    LogStub.init();
-    Log.enableFailQuick(false);
-  }
-  
+
   @BeforeEach
   public void setup(){
-    SymbolruleTestMill.reset();
-    SymbolruleTestMill.init();
     BasicSymbolsMill.initializePrimitives();
   }
 
@@ -86,7 +77,6 @@ public class SymbolruleTest {
     assertEquals(deserializedTest2, deserializedTest2.getIfPublic());
     assertTrue(SymTypeExpressionFactory.createPrimitive("int").deepEquals(deserializedTest2.getSuperTypes(0)));
     assertTrue(SymTypeExpressionFactory.createPrimitive("int").deepEquals(deserializedTest2.getByName("int")));
-    assertTrue(Log.getFindings().isEmpty());
   }
 
   @Test
@@ -118,7 +108,7 @@ public class SymbolruleTest {
     assertEquals("test", as.getModifiedName(2));
     assertTrue(SymTypeExpressionFactory.createPrimitive("int").deepEquals(as2.getSymType()));
     assertEquals(1, as2.getLocalFooSymbols().size());
-    ISymbolruleTestScope fooSpannedScope = as2.getLocalFooSymbols().get(0).getSpannedScope();
+    ISymbolruleTestScope fooSpannedScope = as2.getLocalFooSymbols().getFirst().getSpannedScope();
     assertEquals(2, fooSpannedScope.getLocalBarSymbols().size());
     assertEquals("Test1", fooSpannedScope.getLocalBarSymbols().get(0).getName());
     assertEquals("Test2", fooSpannedScope.getLocalBarSymbols().get(1).getName());
@@ -127,14 +117,13 @@ public class SymbolruleTest {
     assertEquals("symbol1", bar1SpannedScope.getLocalTest1Symbols().get(0).getName());
     assertEquals("symbol11", bar1SpannedScope.getLocalTest1Symbols().get(1).getName());
     assertEquals(1, bar1SpannedScope.getLocalTest2Symbols().size());
-    assertEquals("symbol2", bar1SpannedScope.getLocalTest2Symbols().get(0).getName());
+    assertEquals("symbol2", bar1SpannedScope.getLocalTest2Symbols().getFirst().getName());
     ISymbolruleTestScope bar2SpannedScope = fooSpannedScope.getLocalBarSymbols().get(1).getSpannedScope();
     assertEquals(2, bar2SpannedScope.getLocalTest1Symbols().size());
     assertEquals("symbol3", bar2SpannedScope.getLocalTest1Symbols().get(0).getName());
     assertEquals("symbol4", bar2SpannedScope.getLocalTest1Symbols().get(1).getName());
     assertEquals(1, bar2SpannedScope.getLocalTest2Symbols().size());
-    assertEquals("symbol22", bar2SpannedScope.getLocalTest2Symbols().get(0).getName());
-    assertTrue(Log.getFindings().isEmpty());
+    assertEquals("symbol22", bar2SpannedScope.getLocalTest2Symbols().getFirst().getName());
   }
 
   @Test
@@ -144,7 +133,6 @@ public class SymbolruleTest {
     Dummy dummy = (Dummy) symbol;
     assertInstanceOf(IDummy.class, symbol);
     IDummy iDummy = (IDummy) symbol;
-    assertTrue(Log.getFindings().isEmpty());
   }
 
   @Test
@@ -159,7 +147,7 @@ public class SymbolruleTest {
     as.setNamesList(Lists.newArrayList("A", "B", "C"));
     as.setSymTypesList(Lists.newArrayList(SymTypeExpressionFactory.createPrimitive("int"), SymTypeExpressionFactory.createPrimitive("double")));
     as.setArePresentList(Lists.newArrayList(false, true, true, false));
-    as.setBigNumbersList(Lists.newArrayList(3l));
+    as.setBigNumbersList(Lists.newArrayList(3L));
     as.setDoubleFloatingPointsList(Lists.newArrayList(3.4,6.3,5.5));
     as.setFloatingPointsList(Lists.newArrayList(3.4f,32.4f,1.3f));
 
@@ -195,8 +183,5 @@ public class SymbolruleTest {
     assertEquals(as.getFloatingPoints(0), as2.getFloatingPoints(0));
     assertEquals(as.getFloatingPoints(1), as2.getFloatingPoints(1));
     assertEquals(as.getFloatingPoints(2), as2.getFloatingPoints(2));
-    assertTrue(Log.getFindings().isEmpty());
   }
-
-
 }
